// Copyright 2024 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.clusterconfig.v1;

import "teleport/header/v1/metadata.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/clusterconfig/v1;clusterconfigv1";

// AccessGraphSettings holds dynamic configuration settings for the Access Graph service.
message AccessGraphSettings {
  // kind is the kind of the resource.
  string kind = 1;
  // sub_kind is the sub kind of the resource.
  string sub_kind = 2;
  // version is the version of the resource.
  string version = 3;
  // metadata is the metadata of the resource.
  teleport.header.v1.Metadata metadata = 4;
  // spec is the spec of the resource.
  AccessGraphSettingsSpec spec = 5;
}

// AccessGraphSettingsSpec is the spec for the Access Graph service configuration settings.
message AccessGraphSettingsSpec {
  // secrets_scan_config is used to configure the parameters for the secrets scanning functionality.
  AccessGraphSecretsScanConfig secrets_scan_config = 1;
}

// AccessGraphSecretsScanConfig is used to configure the parameters for the secrets scanning functionality.
enum AccessGraphSecretsScanConfig {
  // ACCESS_GRAPH_SECRETS_SCAN_CONFIG_UNSPECIFIED is an unknown secrets scan configuration.
  ACCESS_GRAPH_SECRETS_SCAN_CONFIG_UNSPECIFIED = 0;
  // ACCESS_GRAPH_SECRETS_SCAN_CONFIG_DISABLED is a disabled secrets scan configuration.
  ACCESS_GRAPH_SECRETS_SCAN_CONFIG_DISABLED = 1;
  // ACCESS_GRAPH_SECRETS_SCAN_CONFIG_ENABLED is an enabled secrets scan configuration.
  ACCESS_GRAPH_SECRETS_SCAN_CONFIG_ENABLED = 2;
}
